--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <script src="./src/index.js" defer></script>
     <script src="./src/email-validation.js" defer></script>
+    <script src="./src/password-validation.js" defer></script>
     <link rel="stylesheet" href="./src/style/style.css" />
   </head>
   <body>
@@ -21,6 +22,14 @@
       <div id="div-email">
         <label for="email">Email:</label>
         <input type="text" id="email" name="email" />
+      </div>
+      <div id ="div-password">
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" />
+      </div>
+      <div id="div-confirm-password">
+        <label for="confirm-password">Confirm Password:</label>
+        <input type="password" id="confirm-password" name="confirmPassword" />
       </div>
       <div>
         <label for="nick-name">Nick Name:</label>
