apdate email-validation and password-validation , add home work 25 JS 15 Collect props

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
       </div>
       <div id="div-email">
         <label for="email">Email:</label>
-        <input type="text" id="email" name="email" />
+        <input type="email" id="email" name="email" />
+      </div>
+      <div class="div-error error-email-novisi">
+        <p>email is not valid</p>
       </div>
       <div id ="div-password">
         <label for="password">Password:</label>
@@ -30,6 +33,9 @@
       <div id="div-confirm-password">
         <label for="confirm-password">Confirm Password:</label>
         <input type="password" id="confirm-password" name="confirmPassword" />
+      </div>
+      <div class="div-error error-confirm-password">
+        <p>password is not matching</p>
       </div>
       <div>
         <label for="nick-name">Nick Name:</label>
